Adding information to site

--- a/index.html
+++ b/index.html
@@ -1,7 +1,26 @@
 <!DOCTYPE html>
 <html>
-<body>
-    <h1>Hello World</h1>
-    <p>Test</p>
-</body>
+    <head>
+        <meta charset='utf-8'>
+        <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+        <title>Ryan Schofield</title>
+        <meta name='viewport' content='width=device-width, initial-scale=1'>
+        <meta name="robots" content="noindex,noarchive, nofollow" />
+        <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+        <script src='main.js'></script>
+    </head>
+    <body>
+        <header>
+            Welcome!
+        </header>
+        <nav>
+            <a href = "index.html" >About Me</a>
+            <a href = "projects.html" >Projects</a>
+            <a href ="contact.html" >Contact</a>
+        </nav>
+        <p>Hello! My name is Ryan Schofield and I am currently and undergrad at Oregon State University. I will graduate in 
+        December of 2023 with a degree in Mechanical Engineering and a minor in Computer Science and Humanitarian Engineering. In 
+        January of 2024 I plan to start my grauduate degree in robotics at Oregon State. 
+        </p>
+    </body>
 </html>
