--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,6 @@
         <a href = "projects.html" >Projects</a>
         <a href ="contact.html" >Contact</a>
     </nav>
-    <a href="www.linkedin.com/in/ryan-schofield-197187165">LinkedIn Profile</a>
+    <a href="https://www.linkedin.com/in/ryan-schofield-197187165/">LinkedIn Profile</a>
 </body>
 </html>
