Updated main.css and index.html

--- a/index.html
+++ b/index.html
@@ -18,9 +18,12 @@
             <a href = "projects.html" >Projects</a>
             <a href ="contact.html" >Contact</a>
         </nav>
-        <p>Hello! My name is Ryan Schofield and I am currently and undergrad at Oregon State University. I will graduate in 
-        December of 2023 with a degree in Mechanical Engineering and a minor in Computer Science and Humanitarian Engineering. In 
-        January of 2024 I plan to start my grauduate degree in robotics at Oregon State. 
-        </p>
+        <article>
+            <h1>About Me</h1>
+            <p>Hello! My name is Ryan Schofield and I am currently and undergrad at Oregon State University. I will graduate in 
+            December of 2023 with a degree in Mechanical Engineering and a minor in Computer Science and Humanitarian Engineering. In 
+            January of 2024 I plan to start my grauduate degree in robotics at Oregon State. 
+            </p>
+        </article>
     </body>
 </html>
