Updated index and main

--- a/contact.html
+++ b/contact.html
@@ -9,13 +9,16 @@
 </head>
 <body>
     <header>
-        Contact Information
+        Welcome!
     </header>
     <nav>
         <a href = "index.html" >About Me</a>
         <a href = "projects.html" >Projects</a>
         <a href ="contact.html" >Contact</a>
     </nav>
-    <a href="https://www.linkedin.com/in/ryan-schofield-197187165/">LinkedIn Profile</a>
+    <h1>Contact Information</h1>
+    <article>
+        <a href="https://www.linkedin.com/in/ryan-schofield-197187165/">LinkedIn Profile</a>
+    </article>
 </body>
 </html>
