--- a/projects.html
+++ b/projects.html
@@ -8,18 +8,23 @@
     <script src='main.js'></script>
 </head>
 <body>
-    <header>My Projects</header>
+    <header>
+        Welcome!
+    </header>
     <nav>
         <a href = "index.html" >About Me</a>
         <a href = "projects.html" >Projects</a>
         <a href ="contact.html" >Contact</a>
     </nav>
-    <h1>Sumobot</h1>
-    <p>During my senior year at oregon state, I worked on my capstone project called a sumobot. The group was tasked with creating
-        a robot that could fight in a mega sumobot competion. I worked mostly on the mechanical and computer science side. 
-    </p>
-    <figure>
-        <img src="sumobot-assembly.jpg" alt = "Sumobot"/> 
-    </figure>
+    <h1>My Projects</h1>
+    <article>
+        <h2>Sumobot</h2>
+        <p>During my senior year at oregon state, I worked on my capstone project called a sumobot. The group was tasked with creating
+            a robot that could fight in a mega sumobot competion. I worked mostly on the mechanical and computer science side. 
+        </p>
+        <figure>
+            <img src="sumobot-assembly.jpg" alt = "Sumobot"/> 
+        </figure>
+    </article>
 </body>
 </html>
