Updated all website code files

--- a/contact.html
+++ b/contact.html
@@ -20,5 +20,9 @@
     <article>
         <a href="https://www.linkedin.com/in/ryan-schofield-197187165/">LinkedIn Profile</a>
     </article>
+    <footer>
+        <p>&copy; 2023 Ryan Schofield</p>
+        <p> <a href="https://www.linkedin.com/in/ryan-schofield-197187165/">LinkedIn Profile</a></p>
+    </footer>
 </body>
 </html>
