--- a/index.html
+++ b/index.html
@@ -25,5 +25,9 @@
             January of 2024 I plan to start my grauduate degree in robotics at Oregon State. 
             </p>
         </article>
+        <footer>
+            <p>&copy; 2023 Ryan Schofield</p>
+            <p> <a href="https://www.linkedin.com/in/ryan-schofield-197187165/">LinkedIn Profile</a></p>
+        </footer>
     </body>
 </html>
