--- a/projects.html
+++ b/projects.html
@@ -26,5 +26,9 @@
             <img src="sumobot-assembly.jpg" alt = "Sumobot"/> 
         </figure>
     </article>
+    <footer>
+        <p>&copy; 2023 Ryan Schofield</p>
+        <p> <a href="https://www.linkedin.com/in/ryan-schofield-197187165/">LinkedIn Profile</a></p>
+    </footer>
 </body>
 </html>
