--- a/projects.html
+++ b/projects.html
@@ -25,6 +25,12 @@
         <figure>
             <img src="sumobot-assembly.jpg" alt = "Sumobot"/> 
         </figure>
+        <dl>
+            <dt>Fruits I like:</dt>
+            <dd>Apples</dd>
+            <dd>Bananas</dd>
+            <dd>Oranges</dd>
+          </dl>
     </article>
     <footer>
         <p>&copy; 2023 Ryan Schofield</p>
