--- a/projects.html
+++ b/projects.html
@@ -25,12 +25,21 @@
         <figure>
             <img src="sumobot-assembly.jpg" alt = "Sumobot"/> 
         </figure>
-        <dl>
-            <dt>Fruits I like:</dt>
-            <dd>Apples</dd>
-            <dd>Bananas</dd>
-            <dd>Oranges</dd>
-          </dl>
+        <header>Skills Used </header>
+        <table border="1">
+            <tr>
+                <td>Item 1</td>
+                <td>Item 2</td>
+            </tr>
+            <tr>
+                <td>Item 3</td>
+                <td>Item 4</td>
+            </tr>
+            <tr>
+                <td>Item 5</td>
+                <td>Item 6</td>
+            </tr>
+        </table>
     </article>
     <footer>
         <p>&copy; 2023 Ryan Schofield</p>
