--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,7 @@
             <img src="sumobot-assembly.jpg" alt = "Sumobot"/> 
         </figure>
         <header>Skills Used </header>
-        <table border="1">
+        <table>
             <tr>
                 <td>Item 1</td>
                 <td>Item 2</td>
