--- a/projects.html
+++ b/projects.html
@@ -25,11 +25,13 @@
         <figure>
             <img src="sumobot-assembly.jpg" alt = "Sumobot"/> 
         </figure>
-        <header>Skills Used </header>
-        <table boarder = '1'>
+        <h3>Skills Used</h3>
+        <table boarder = '0'>
             <tr>
-                <td>Item 1</td>
-                <td>Item 2</td>
+                <ul>
+                    <td><li>Item 1</li></td>
+                    <td><li>Item 2</li></td>
+                </ul>
             </tr>
             <tr>
                 <td>Item 3</td>
