--- a/projects.html
+++ b/projects.html
@@ -25,21 +25,26 @@
         <figure>
             <img src="sumobot-assembly.jpg" alt = "Sumobot"/> 
         </figure>
+
         <h3>Skills Used</h3>
         <table boarder = '0'>
             <tr>
                 <ul>
-                    <td><li>Item 1</li></td>
-                    <td><li>Item 2</li></td>
+                    <td><li>Arduino</li></td>
+                    <td><li>Solidworks</li></td>
+                </ul>
+            </tr>
+             <tr>
+                <ul>
+                    <td><li>Techincal Drawings</li></td>
+                    <td><li></li>Time Management</td>
                 </ul>
             </tr>
             <tr>
-                <td>Item 3</td>
-                <td>Item 4</td>
-            </tr>
-            <tr>
-                <td>Item 5</td>
-                <td>Item 6</td>
+                <ul>
+                    <td><li>Presentation</li></td>
+                    <td><li>Teamwork</li></td>
+                </ul>
             </tr>
         </table>
     </article>
