--- a/projects.html
+++ b/projects.html
@@ -30,7 +30,7 @@
         <table boarder = '0'>
             <tr>
                 <ul>
-                    <td><li>Arduino</li></td>
+                    <td><li>Arduino TEST</li></td>
                     <td><li>Solidworks</li></td>
                 </ul>
             </tr>
