--- a/projects.html
+++ b/projects.html
@@ -30,8 +30,8 @@
         <table boarder = '0'>
             <tr>
                 <ul>
-                    <td><li>Arduino TEST</li></td>
-                    <td><li>Solidworks</li></td>
+                    <td style: width: 50%><li>Arduino TEST</li></td>
+                    <td style: width: 50%><li>Solidworks</li></td>
                 </ul>
             </tr>
              <tr>
