--- a/projects.html
+++ b/projects.html
@@ -30,14 +30,14 @@
         <table boarder = '0'>
             <tr>
                 <ul>
-                    <td style: width: 50%><li>Arduino TEST</li></td>
-                    <td style: width: 50%><li>Solidworks</li></td>
+                    <td><li>Arduino TEST</li></td>
+                    <td><li>Solidworks TEST </li></td>
                 </ul>
             </tr>
              <tr>
                 <ul>
                     <td><li>Techincal Drawings</li></td>
-                    <td><li></li>Time Management</td>
+                    <td><li>Time Management</li></td>
                 </ul>
             </tr>
             <tr>
