--- a/projects.html
+++ b/projects.html
@@ -19,8 +19,10 @@
     <h1>My Projects</h1>
     <article>
         <h2>Sumobot</h2>
-        <p>During my senior year at oregon state, I worked on my capstone project called a sumobot. The group was tasked with creating
-            a robot that could fight in a mega sumobot competion. I worked mostly on the mechanical and computer science side. 
+        <p>During my senior year at Oregon State University, I worked on my capstone project which was to create a Sumobot. The 4-person team was tasked with creating
+            a robot that could fight in a mega sumobot competion. I filed the role of mechnical lead and coding lead. The design we created focused on using interesting shapes 
+            and to be easily modified. The design had a metal frame with a 3D printed top and mutliple 3D printed armors. An arduino was used to control the motors and get data from
+            the sensors used. The speed and direction of the motors were based off of readings from the sensors. 
         </p>
         <figure>
             <img src="sumobot-assembly.jpg" alt = "Sumobot"/> 
