--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@
             the sensors used. The speed and direction of the motors were based off of readings from the sensors. 
         </p>
         <figure>
-            <img src="sumobot-assembly.jpg" alt = "Sumobot"/> 
+            <img src="sumobot-assembly.jpg" alt = "Sumobot" class = "center"/> 
         </figure>
 
         <h3>Skills Used</h3>
