--- a/projects.html
+++ b/projects.html
@@ -32,8 +32,8 @@
         <table boarder = '0'>
             <tr>
                 <ul>
-                    <td><li>Arduino TEST </li></td>
-                    <td><li>Solidworks </li></td>
+                    <td><li>Arduino</li></td>
+                    <td><li>Solidworks</li></td>
                 </ul>
             </tr>
              <tr>
