--- a/projects.html
+++ b/projects.html
@@ -24,16 +24,18 @@
             and to be easily modified. The design had a metal frame with a 3D printed top and mutliple 3D printed armors. An arduino was used to control the motors and get data from
             the sensors used. The speed and direction of the motors were based off of readings from the sensors. 
         </p>
-        <figure>
-            <img src="sumobot-assembly.jpg" alt = "Sumobot" class = "center"/> 
-        </figure>
+        <center>
+            <figure>
+                <img src="sumobot-assembly.jpg" alt = "Sumobot"/> 
+            </figure>
+        </center>
 
         <h3>Skills Used</h3>
         <table boarder = '0'>
             <tr>
                 <ul>
-                    <td><li>Arduino</li></td>
-                    <td><li>Solidworks</li></td>
+                    <td><li>Arduino TEST</li></td>
+                    <td><li>Solidworks TEST</li></td>
                 </ul>
             </tr>
              <tr>
