--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@
                 <img src="sumobot-assembly.jpg" alt = "Sumobot"/> 
             </figure>
         </center>
-        
+
         <h3>Skills Used</h3>
         <table boarder = '0'>
             <tr>
@@ -52,6 +52,36 @@
             </tr>
         </table>
     </article>
+    <article>
+        <h2>Undergraduate Thesis</h2>
+        <p>
+            Created a Jupyter Notebook. 
+        </p>
+        <a href="SchofieldRyan2024" download="Codesign of a Jupyter Notebook for Wood Stove Emissions Analysis">Download</a>
+
+        <h3>Skills Used</h3>
+        <table boarder = '0'>
+            <tr>
+                <ul>
+                    <td><li>Arduino</li></td>
+                    <td><li>Solidworks</li></td>
+                </ul>
+            </tr>
+            <tr>
+                <ul>
+                    <td><li>Techincal Drawings</li></td>
+                    <td><li>Time Management</li></td>
+                </ul>
+            </tr>
+            <tr>
+                <ul>
+                    <td><li>Presentation</li></td>
+                    <td><li>Teamwork</li></td>
+                </ul>
+            </tr>
+        </table>
+    </article>
+
     <footer>
         <p>&copy; 2023 Ryan Schofield</p>
         <p> <a href="https://www.linkedin.com/in/ryan-schofield-197187165/">LinkedIn Profile</a></p>
