--- a/projects.html
+++ b/projects.html
@@ -57,7 +57,7 @@
         <p>
             Created a Jupyter Notebook. 
         </p>
-        <a href="SchofieldRyan2024" download="SchofieldRyan2024">Download</a>
+        <a href="SchofieldRyan2024.pdf" download="SchofieldRyan2024.pdf">Click Here to Download</a>
 
         <h3>Skills Used</h3>
         <table boarder = '0'>
