--- a/projects.html
+++ b/projects.html
@@ -55,7 +55,9 @@
     <article>
         <h2>Undergraduate Thesis</h2>
         <p>
-            Created a Jupyter Notebook. 
+            Working with Aprovecho, I created a Jupyter Notebook Interface for Wood Stove Emissions Analysis to effectively create safer traditional wood stove designs mostly found in third world countries. 
+            This notebook used code from Aprovecho and added visuals and other functionalty to create a useful user interface. This allows for easier data analysis, which allows for design changes to be more efficient. 
+
         </p>
         <a href="SchofieldRyan2024.pdf" download="SchofieldRyan2024.pdf">Click Here to Download</a>
 
@@ -63,20 +65,14 @@
         <table boarder = '0'>
             <tr>
                 <ul>
-                    <td><li>Arduino</li></td>
-                    <td><li>Solidworks</li></td>
+                    <td><li>Jupyter Notebook</li></td>
+                    <td><li>Python</li></td>
                 </ul>
             </tr>
             <tr>
                 <ul>
-                    <td><li>Techincal Drawings</li></td>
-                    <td><li>Time Management</li></td>
-                </ul>
-            </tr>
-            <tr>
-                <ul>
-                    <td><li>Presentation</li></td>
-                    <td><li>Teamwork</li></td>
+                    <td><li>User Interface Design</li></td>
+                    <td><li>Research</li></td>
                 </ul>
             </tr>
         </table>
