--- a/projects.html
+++ b/projects.html
@@ -41,12 +41,12 @@
             <tr>
                 <ul>
                     <td><li>Techincal Drawings</li></td>
-                    <td><li>Time Management</li></td>
+                    <td><li>3D printing</li></td>
                 </ul>
             </tr>
             <tr>
                 <ul>
-                    <td><li>Presentation</li></td>
+                    <td><li>Time Management</li></td>
                     <td><li>Teamwork</li></td>
                 </ul>
             </tr>
@@ -56,7 +56,7 @@
         <h2>Undergraduate Thesis</h2>
         <p>
             Working with Aprovecho, I created a Jupyter Notebook Interface for Wood Stove Emissions Analysis to effectively create safer traditional wood stove designs mostly found in third world countries. 
-            This notebook used code from Aprovecho and added visuals and other functionalty to create a useful user interface. This allows for easier data analysis, which allows for design changes to be more efficient. 
+            This notebook used code from Aprovecho and added visuals and other functionalty to create a useful user interface. This makes for easier data analysis, which allows for design changes to be more efficient. 
 
         </p>
         <a href="SchofieldRyan2024.pdf" download="SchofieldRyan2024.pdf">Click Here to Download</a>
@@ -75,8 +75,41 @@
                     <td><li>Research</li></td>
                 </ul>
             </tr>
+            <tr>
+                <ul>
+                    <td><li>Presentation</li></td>
+                    <td><li>Time Managment</li></td>
+                </ul>
+            </tr>
         </table>
     </article>
+
+    <article>
+        <h2>Masters Project</h2>
+        <p>
+            Using a UR5e arm, I created a system that will measure the diameter of the branch it is placed in front of. The majors steps of this system are 
+            one getting parallel to the branch, two performing optical flow, and three making contact with the branch. This system was coded in python and uses the 
+            Robotic Operating System (ROS2). The end effecor was designed in SolidWorks and 3D printed. It uses 2 low-cost time-of-flight (TOF) sensors, a load cell, an RGB camera, and an arduino. 
+        </p>
+        <p> <a href="https://github.com/ryanschofield9/Ground_Truth_Ros">Github</a></p>
+
+        <h3>Skills Used</h3>
+        <table boarder = '0'>
+            <tr>
+                <ul>
+                    <td><li>ROS2</li></td>
+                    <td><li>Python</li></td>
+                </ul>
+            </tr>
+            <tr>
+                <ul>
+                    <td><li>3D printing</li></td>
+                    <td><li>Solidworks</li></td>
+                </ul>
+            </tr>
+        </table>
+    </article>
+
 
     <footer>
         <p>&copy; 2023 Ryan Schofield</p>
