--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <article>
             <h1>About Me</h1>
             <p>Hello! My name is Ryan Schofield and I am currently a Master Studen at Oregon State University. I graduated from Oregon State with my bachelor's degree
-            in Mechanical Engineering and a minor in Computer Science and Humanitarian Engineering. In will graduate with my Master's degree in Robotics in March 2025. 
+            in Mechanical Engineering and a minor in Computer Science and Humanitarian Engineering. I will graduate with my Master's degree in Robotics in March 2025. 
             I am interested in making a meaningful impact in the robotics field. 
             </p>
         </article>
