--- a/contact.html
+++ b/contact.html
@@ -18,11 +18,11 @@
     </nav>
     <h1>Contact Information</h1>
     <article>
-        <p>Email: ryan</p>
+        <p>Email: ryan@</p>
         <a href="https://www.linkedin.com/in/ryan-schofield-197187165/">LinkedIn Profile</a>
     </article>
     <footer>
-        <p>&copy; 2023 Ryan Schofield</p>
+        <p>&copy; 2024 Ryan Schofield</p>
         <p> <a href="https://www.linkedin.com/in/ryan-schofield-197187165/">LinkedIn Profile</a></p>
     </footer>
 </body>
