--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
     </nav>
     <h1>Contact Information</h1>
     <article>
-        <p>Email: ryan@</p>
+        <p>Email: ryanalexis123@gmail.com</p>
         <a href="https://www.linkedin.com/in/ryan-schofield-197187165/">LinkedIn Profile</a>
     </article>
     <footer>
