--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        Welcome!
+        Welcome!!
     </header>
     <nav>
         <a href = "index.html" >About Me</a>
