--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <header>
-            Welcome!!!
+            Welcome!
         </header>
         <nav>
             <a href = "index.html" >About Me</a>
