--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <title>Ryan Schofield</title>
         <meta name='viewport' content='width=device-width, initial-scale=1'>
         <meta name="robots" content="noindex,noarchive, nofollow" />
+        <meta http-equiv='cache-control' content='no-cache'> 
+        <meta http-equiv='expires' content='0'> 
+        <meta http-equiv='pragma' content='no-cache'>
         <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
         <script src='main.js'></script>
     </head>
