--- a/index.html
+++ b/index.html
@@ -23,10 +23,27 @@
         </nav>
         <article>
             <h1>About Me</h1>
-            <p>Hello! My name is Ryan Schofield and I am currently a Master Studen at Oregon State University. I graduated from Oregon State with my bachelor's degree
-            in Mechanical Engineering and a minor in Computer Science and Humanitarian Engineering. I will graduate with my Master's degree in Robotics in March 2025. 
-            I am interested in making a meaningful impact in the robotics field. 
+            <p>Hello! My name is Ryan Schofield and I'm currently a Master Student at Oregon State University. In 2024, 
+            I received my honors bachelor's degree in Mechanical Engineering with a minor in Computer Science and Humanitarian 
+            Engineering from Oregon State University. In March 2025, I will graduate with my Master's degree in Robotics.
+            Once I graduate, I plan to find a job working in robotics field while also using my mechanical engineering background.
+            With my combination of education, experience, and drive, I know I can make a meaningful impact in the robotics field
             </p>
+            <figure>
+                <img src="images/MeSittingOnBench.jpg" alt = "OnBench"/> 
+            </figure>
+            <figure>
+                <img src="images/MeandBen.jpg" alt = "Ben"/> 
+            </figure>
+            <figure>
+                <img src="images/FamHike.jpg" alt = "Hike"/> 
+            </figure>
+            <figure>
+                <img src="images/BenandChip.jpg" alt = "benandchip"/> 
+            </figure>
+            <figure>
+                <img src="images/MeSkiing.JPG" alt = "Ski"/> 
+            </figure>
         </article>
         <footer>
             <p>&copy; 2024 Ryan Schofield</p>
