--- a/index.html
+++ b/index.html
@@ -30,20 +30,16 @@
             With my combination of education, experience, and drive, I know I can make a meaningful impact in the robotics field
             </p>
             <figure>
-                <img src="images/MeSittingOnBench.jpg" alt = "OnBench"/> 
+                <img src="images/MeSittingOnBench.jpg" alt = "OnBench"/>  <img src="images/MeandBen.jpg" alt = "Ben"/> 
             </figure>
             <figure>
-                <img src="images/MeandBen.jpg" alt = "Ben"/> 
+                <img src="images/FamHike.jpg" alt = "Hike"/>  <img src="images/BenandChip.jpg" alt = "benandchip"/> 
             </figure>
-            <figure>
-                <img src="images/FamHike.jpg" alt = "Hike"/> 
-            </figure>
-            <figure>
-                <img src="images/BenandChip.jpg" alt = "benandchip"/> 
-            </figure>
-            <figure>
-                <img src="images/MeSkiing.JPG" alt = "Ski"/> 
-            </figure>
+            <center>
+                    <figure>
+                        <img src="images/MeSkiing.JPG" alt = "Ski"/> 
+                    </figure>
+            </center>
         </article>
         <footer>
             <p>&copy; 2024 Ryan Schofield</p>
