--- a/index.html
+++ b/index.html
@@ -29,15 +29,19 @@
             Once I graduate, I plan to find a job working in robotics field while also using my mechanical engineering background.
             With my combination of education, experience, and drive, I know I can make a meaningful impact in the robotics field
             </p>
-            <figure>
-                <img src="images/MeSittingOnBench.jpg" alt = "OnBench"/>  <img src="images/MeandBen.jpg" alt = "Ben"/> 
-            </figure>
-            <figure>
-                <img src="images/FamHike.jpg" alt = "Hike"/>  <img src="images/BenandChip.jpg" alt = "benandchip"/> 
-            </figure>
             <center>
-                    <figure>
-                        <img src="images/MeSkiing.JPG" alt = "Ski"/> 
+                <figure>
+                    <img src="images/MeSittingOnBench.jpg" alt = "OnBench"/>  <img src="images/MeandBen.jpg" alt = "Ben"/> 
+                </figure>
+            </center>
+            <center>
+                <figure>
+                    <img src="images/BenandChip.jpg" alt = "benandchip"/> <img src="images/MeSkiing.JPG" alt = "Ski"/> 
+                </figure>
+            </center>
+            <center>
+                    <figure> 
+                        <img src="images/FamHike.jpg" alt = "Hike"/> 
                     </figure>
             </center>
         </article>
