--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
             </center>
             <center>
                 <figure>
-                    <img src="images/BenandChip.jpg" alt = "benandchip"/> <img src="images/MeSkiing.JPG" alt = "Ski"/> 
+                    <img src="images/BenandChip.jpg" alt = "benandchip"/> <img src="images/FamHike.jpg" alt = "Hike"/> 
                 </figure>
             </center>
             <center>
                     <figure> 
-                        <img src="images/FamHike.jpg" alt = "Hike"/> 
+                        <img src="images/MeSkiing.JPG" alt = "Ski"/> 
                     </figure>
             </center>
         </article>
