--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
             Once I graduate, I plan to find a job working in robotics field while also using my mechanical engineering background.
             With my combination of education, experience, and drive, I know I can make a meaningful impact in the robotics field
             </p>
+
+            <p>Outside of school and work, I enjoy hiking with my family and dogs (Benny and Chipper). I also enjoy running, baking, and playing board games. </p>
             <center>
                 <figure>
                     <img src="images/MeSittingOnBench.jpg" alt = "OnBench"/>  <img src="images/MeandBen.jpg" alt = "Ben"/> 
