--- a/projects.html
+++ b/projects.html
@@ -33,6 +33,10 @@
             </figure>
         </center>
 
+        <video width="400" height="226" controls>
+            <source src="SumobotBattle.mp4" type="video/mp4">
+        </video>
+
         <h3>Skills Used</h3>
         <table boarder = '0'>
             <tr>
