adding technical drawings

--- a/projects.html
+++ b/projects.html
@@ -33,9 +33,14 @@
             </figure>
         </center>
 
-        <video width="400" height="226" controls>
-            <source src="SumobotBattle.mp4" type="video/mp4">
-        </video>
+        <center>
+            <figure>
+                <img src="FrameDrawing.jpg" alt = "FrameDrawing"/>  <img src="BaseDrawing.jpg" alt = "BaseDrawing"/> 
+            </figure>
+        </center>
+
+
+        <a href="SchofieldRyan2024.pdf" download="SchofieldRyan2024.pdf">Click Here to Download Technical Drawings for the Sumobot</a>
 
         <h3>Skills Used</h3>
         <table boarder = '0'>
@@ -66,7 +71,7 @@
             This notebook used code from Aprovecho and added visuals and other functionalty to create a useful user interface. This makes for easier data analysis, which allows for design changes to be more efficient. 
 
         </p>
-        <a href="SchofieldRyan2024.pdf" download="SchofieldRyan2024.pdf">Click Here to Download</a>
+        <a href="SchofieldRyan2024.pdf" download="SchofieldRyan2024.pdf">Click Here to Download Thesis</a>
 
         <h3>Skills Used</h3>
         <table boarder = '0'>
