adding technical drawings

--- a/projects.html
+++ b/projects.html
@@ -35,12 +35,12 @@
 
         <center>
             <figure>
-                <img src="FrameDrawing.jpg" alt = "FrameDrawing"/>  <img src="BaseDrawing.jpg" alt = "BaseDrawing"/> 
+                <img src="images/FrameDrawing.jpg" alt = "FrameDrawing"/>  <img src="images/BaseDrawing.jpg" alt = "BaseDrawing"/> 
             </figure>
         </center>
 
 
-        <a href="SchofieldRyan2024.pdf" download="SchofieldRyan2024.pdf">Click Here to Download Technical Drawings for the Sumobot</a>
+        <a href="609.2_CAD_Package.pdf" download="609.2_CAD_Package.pdf">Click Here to Download Technical Drawings for the Sumobot</a>
 
         <h3>Skills Used</h3>
         <table boarder = '0'>
