adding website link

--- a/projects.html
+++ b/projects.html
@@ -67,7 +67,7 @@
     <article>
         <h2>Undergraduate Thesis</h2>
         <p>
-            Working with Aprovecho, I created a Jupyter Notebook Interface for Wood Stove Emissions Analysis to effectively create safer traditional wood stove designs mostly found in third world countries. 
+            Working with <a href="https://aprovecho.org/">Aprovecho Research Center </a>, I created a Jupyter Notebook Interface for Wood Stove Emissions Analysis to effectively create safer traditional wood stove designs mostly found in third world countries. 
             This notebook used code from Aprovecho and added visuals and other functionalty to create a useful user interface. This makes for easier data analysis, which allows for design changes to be more efficient. 
 
         </p>
