updating photo sizes

--- a/projects.html
+++ b/projects.html
@@ -108,11 +108,13 @@
                 <li>Using the Optical Flow Mask and Known Distance of the Branch, Determine the Diameter </li>
             </ol>
             This system was coded in python and uses the Robotic Operating System (ROS2). The end effecor was designed in SolidWorks
-            and 3D printed. It uses 2 low-cost time-of-flight (TOF) sensors, a load cell, an RGB camera, and an arduino. 
+            and 3D printed. It uses 2 low-cost time-of-flight (TOF) sensors, a load cell, an RGB camera, and an arduino. This system 
+            is used to measure trees in an orchard to get ground truth measurements. These measurments will be compared to the 3D 
+            reconstruction of the tree to determine the reconstruction accuracy.
         </p>
         <p>
-            This system is used to measure trees in an orchard to get ground truth measurements. These measurments will be compared to the 
-            3D reconstruction of the tree to determine the reconstruction accuracy. 
+            I also designed a proxy apple tree. This tree can be easily altered to change the branch angles and locations. This allows 
+            for in lab testing all year. 
         </p>
         <center>
             <figure>
